k8s-atifacts/si/si-runtime-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"si-runtime-deployment","namespace":"apim-demo"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"si-integration"}},"template":{"metadata":{"labels":{"app":"si-integration"}},"spec":{"containers":[{"image":"arunans23/apim4-si-demo","imagePullPolicy":"Always","name":"streaming-integrator","ports":[{"containerPort":9711,"protocol":"TCP"},{"containerPort":9611,"protocol":"TCP"},{"containerPort":7711,"protoco [...]
  creationTimestamp: "2021-06-01T13:44:00Z"
  generation: 5
  name: si-runtime-deployment
  namespace: apim-demo
  resourceVersion: "65774251"
  uid: 5205e61e-2152-41ea-8313-75b3cf8a3336
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: si-integration
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: si-integration
    spec:
      containers:
      - image: arunans23/apim4-si-demo
        imagePullPolicy: Always
        name: streaming-integrator
        ports:
        - containerPort: 9711
          protocol: TCP
        - containerPort: 9611
          protocol: TCP
        - containerPort: 7711
          protocol: TCP
        - containerPort: 7611
          protocol: TCP
        - containerPort: 9090
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        - containerPort: 8006
          protocol: TCP
        - containerPort: 8025
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/wso2carbon/wso2-config-volume/conf/server
          name: si-config-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: wso2si-cm
        name: si-config-volume
