k8s-atifacts/si/si-runtime-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"si-runtime-service","namespace":"apim-demo"},"spec":{"ports":[{"name":"port-1","port":9711,"targetPort":9711},{"name":"port-2","port":9611,"targetPort":9611},{"name":"port-3","port":7711,"targetPort":7711},{"name":"port-4","port":8003,"targetPort":8003},{"name":"port-5","port":7611,"targetPort":7611},{"name":"port-6","port":9443,"targetPort":9443},{"name":"port-7","port":8006,"targetPort":8006}],"selector":{"app":"si- [...]
  creationTimestamp: "2021-06-01T13:44:03Z"
  name: si-runtime-service
  namespace: apim-demo
  resourceVersion: "2431142"
  uid: 512efe86-64f9-4610-b2ae-04f3112e3b03
spec:
  clusterIP: 10.8.2.13
  clusterIPs:
  - 10.8.2.13
  ports:
  - name: port-1
    port: 9711
    protocol: TCP
    targetPort: 9711
  - name: port-2
    port: 9611
    protocol: TCP
    targetPort: 9611
  - name: port-3
    port: 7711
    protocol: TCP
    targetPort: 7711
  - name: port-4
    port: 8003
    protocol: TCP
    targetPort: 8003
  - name: port-5
    port: 7611
    protocol: TCP
    targetPort: 7611
  - name: port-6
    port: 9443
    protocol: TCP
    targetPort: 9443
  - name: port-7
    port: 8006
    protocol: TCP
    targetPort: 8006
  - name: port-8
    port: 8025
    protocol: TCP
    targetPort: 8025
  selector:
    app: si-integration
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
