k8s-atifacts/si/si-tooling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"si-tooling-deployment","namespace":"apim-demo"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"si-tooling-app"}},"template":{"metadata":{"labels":{"app":"si-tooling-app"}},"spec":{"containers":[{"image":"arunans23/wso2si-tooling","imagePullPolicy":"Always","name":"si-tooling","ports":[{"containerPort":9390,"protocol":"TCP"}]}]}}}}
  creationTimestamp: "2021-06-02T06:57:14Z"
  generation: 1
  name: si-tooling-deployment
  namespace: apim-demo
  resourceVersion: "65750441"
  uid: ac360882-fb0d-4bc6-8c0a-911974df1eb7
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: si-tooling-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: si-tooling-app
    spec:
      containers:
      - image: arunans23/wso2si-tooling
        imagePullPolicy: Always
        name: si-tooling
        ports:
        - containerPort: 9390
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
