k8s-atifacts/si/si-tooling-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"si-tooling-service","namespace":"apim-demo"},"spec":{"ports":[{"name":"port-1","port":9390,"targetPort":9390}],"selector":{"app":"si-tooling-app"},"type":"ClusterIP"}}
  creationTimestamp: "2021-06-02T06:57:15Z"
  name: si-tooling-service
  namespace: apim-demo
  resourceVersion: "2426923"
  uid: 674d42e8-f9f7-41e0-8b2c-85d5aba89fff
spec:
  clusterIP: 10.8.2.168
  clusterIPs:
  - 10.8.2.168
  ports:
  - name: port-1
    port: 9390
    protocol: TCP
    targetPort: 9390
  selector:
    app: si-tooling-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
